# ha-climate2mqtt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions_example.csv  partitions_no_ota.csv  partitions_ota.csv  sdkconfig.defaults
components/libiohub/: CMakeLists.txt
doc/: Hardware_ESP32.md  Hardware_Generic_IR_Blaster.md  Hardware_Generic_IR_Mod.md  Hardware_Generic_NEC_IR.md  Hardware_Mitsubishi.md  Hardware_Reference_ESP32.md  Hardware_Toshiba.md
doc/img/: circuit-diagram.org_ESP32.cddx  circuit-diagram.org_IR.cddx
main/: CMakeLists.txt  HAClimateMqtt.cpp  HAClimateMqtt.h  Kconfig.projbuild  MqttCommandRouter.cpp  MqttCommandRouter.h  idf_component.yml  main.cpp  version.h.in
main/climate/: EmptyClimate.h  IClimate.h  IRMideaClimate.cpp  IRMideaClimate.h  IoHubClimate.cpp  IoHubClimate.h  MideaClimate.cpp  MideaClimate.h  MitsubishiClimate.cpp  MitsubishiClimate.h  ToshibaClimate.cpp  ToshibaClimate.h  UartClimate.cpp  UartClimate.h
main/config/: ConfigConsts.h  EspNVSConfig.cpp  EspNVSConfig.h  IConfig.h
main/led/: Led.cpp  Led.h  StatusLed.cpp  StatusLed.h
main/logs/: LogBuffer.cpp  LogBuffer.h
main/mqtt/: HAMqttClimate.cpp  HAMqttClimate.h  HAMqttClimateImpl.cpp  HAMqttClimateImpl.h  MqttClient.cpp  MqttClient.h  MqttHAClimate.cpp  MqttHAClimate.h
main/systeminfo/: ESP32SystemInfo.h  ISystemInfo.h
main/webserver/: JinjaLikeTemplate.h  UrlUtils.h  WebServer.cpp  WebServer.h
main/webserver/pages/: ClearConfig.h  Climate.h  HeaderFooter.h  Home.h  Logs.h  MQTT.h  Reboot.h  Saved.h  Upgrade.h  WiFi.h
main/wifi/: WiFiAccessPoint.cpp  WiFiAccessPoint.h  WiFiClient.cpp  WiFiClient.h
